k8s01-den1/warehouse20/sonarr/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: warehouse20
  labels:
    app: sonarr
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      targetPort: http
      port: 8989
      protocol: TCP
  selector:
    app: sonarr

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: sonarr
  name: sonarr
  namespace: warehouse20
spec:
  serviceName: sonarr
  selector:
    matchLabels:
      app: sonarr
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      automountServiceAccountToken: false
      containers:
      - name: sonarr
        # Preview tag is for the latest v3
        image: linuxserver/sonarr:preview
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8989
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 2000m
            memory: 2Gi
        # securityContext:
        #   runAsUser: 1024
        #   runAsGroup: 100
        volumeMounts:
        - mountPath: /config
          name: config
          subPath: config
        - mountPath: /mnt/media/store01
          name: media
      volumes:
      - name: config
        persistentVolumeClaim:
            claimName: sonarr-data
      - name: media
        persistentVolumeClaim:
          claimName: media-store01
