k8s01-den1/warehouse20/sonarr/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sonarr
  namespace: warehouse20
spec:
  podSelector:
    matchLabels:
      app: sonarr
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ombi
    - podSelector:
        matchLabels:
          app: organizr
    - podSelector:
        matchLabels:
          app: varken
    - namespaceSelector:
        matchLabels:
          app: ingress-public
    ports:
    - protocol: TCP
      port: http
